<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <data>
        <variable
            name="viewModel"
            type="com.example.todo_app.viewmodels.AuthViewModel" />
    </data>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.auth.SignupFragment"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/off_white"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:textAlignment="center"
        android:textSize="27sp"
        android:layout_marginBottom="15dp"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/primary"
        android:layout_marginHorizontal="15dp"
        />
    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Full name"
        android:inputType="textEmailAddress"
        android:focusedByDefault="true"
        android:layout_marginBottom="15dp"
        android:text="@={viewModel.fullname}"
        android:background="@drawable/edit_text_background"
        android:textColor="@color/primary"
        android:textColorHint="@android:color/darker_gray"
        android:padding="10dp"
        android:layout_marginHorizontal="15dp"
        />
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_example_com"
        android:inputType="textEmailAddress"
        android:focusedByDefault="true"
        android:layout_marginBottom="15dp"
        android:text="@={viewModel.email}"
        android:background="@drawable/edit_text_background"
        android:textColor="@color/primary"
        android:textColorHint="@android:color/darker_gray"
        android:padding="10dp"
        android:layout_marginHorizontal="15dp"
        />
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:focusedByDefault="true"
        app:passwordToggleEnabled="true"
        app:passwordToggleDrawable="@drawable/baseline_visibility_off_24"
        android:layout_marginBottom="15dp"
        android:text="@={viewModel.password}"
        android:background="@drawable/edit_text_background"
        android:textColor="@color/primary"
        android:textColorHint="@android:color/darker_gray"
        android:padding="10dp"
        android:layout_marginHorizontal="15dp"
        />
    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:id="@+id/buttonCreateAccount"
        android:text="@string/sign_up"
        android:backgroundTint="@color/primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:layout_marginBottom="15dp"
        android:onClick="@{()->viewModel.signupUser}"
        android:textColor="@color/white"
        android:elevation="10dp"
        android:layout_marginHorizontal="15dp"
        />
    <com.google.android.material.divider.MaterialDivider
        android:layout_width="100dp"
        android:layout_height="1dp"
        android:background="@color/secondary"
        android:layout_marginBottom="15dp"
        android:layout_gravity="center"
        />
    <com.google.android.material.button.MaterialButton
        style="?attr/materialButtonOutlinedStyle"
        android:id="@+id/buttonLoginUser"
        android:text="@string/already_have_an_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:layout_marginBottom="15dp"
        android:textColor="@color/primary"
        android:layout_marginHorizontal="15dp"
        />

</LinearLayout>
</layout>