<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="todoViewModel"
            type="com.example.todo_app.viewmodels.TodoViewModel" />
    </data>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="10dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.fragments.todo.AddNewTaskFragment"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
            android:fitsSystemWindows="true"
            android:background="@color/secondary"
            android:padding="15dp"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_new_task"
                android:textAlignment="center"
                android:textSize="24sp"
                android:fontFamily="sans-serif-black"
                android:textColor="@color/primary"
                android:layout_marginBottom="15dp"
                />
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/editTextCard"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:backgroundTint="@color/secondary"
                android:elevation="0dp"
                app:cardCornerRadius="10dp"
                android:layout_marginBottom="15dp"
                android:clickable="true"
                >
            <EditText
                android:id="@+id/task"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_task"
                android:background="@android:color/transparent"
                android:layout_margin="15dp"
                android:text="@={todoViewModel.task}"
                android:textColor="@color/primary"
                android:textColorHint="@android:color/darker_gray"
                />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/saveTask"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:backgroundTint="@color/primary"
                android:textColor="@color/off_white"
                android:textAllCaps="true"
                android:elevation="10dp"
                />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>